--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
+    "next-auth": "^4.24.6",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "typescript": "^5",
