--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
+    "@prisma/client": "5.10.2",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
