--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/ennui?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
+GITHUB_ID="930ccd00e061c0d935e5"
+GITHUB_SECRET="c184d279f442224f7bbb558aea14ba13ca231565"
