--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
