--- a/.env.demo
+++ b/.env.demo
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/ennui?schema=public"
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="secret"
-GITHUB_ID="930ccd00e061c0d935e5"
-GITHUB_SECRET="c184d279f442224f7bbb558aea14ba13ca231565"
+DATABASE_URL=
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
